# GFXMath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: README.md
demo/Linux x86_64/: GFXDemoEngine
demo/include/: debug.h  glapplication.h  input.h  log.h  mesh.h  objloader.h  objmaterial.h  objmesh.h  shader.h  string_convert.h
demo/src/: FragmentShader.frag  VertexShader.vert  debug.cpp  glapplication.cpp  input.cpp  log.cpp  main.cpp  objloader.cpp  objmaterial.cpp  objmesh.cpp  shader.cpp  string_convert.cpp  stringutility.cpp
doc/: DOCUMENTATION_HOME.html
doc/DOXYGEN/: Doxyfile  Main_Page.md  customdoxygen.css  header.html  mjax_config.js
doc/DOXYGEN/html/: _form0.eps  _form0.ps  _formulas.dvi  _formulas.tex  _sse_vec_page.html  annotated.html  class_mat44.html  class_sse_mat44.html  class_vec2.html  class_vec3.html  class_vec4.html  classes.html  classgfxmath_1_1_mat44-members.html  classgfxmath_1_1_mat44.html  classgfxmath_1_1_quaternion-members.html  classgfxmath_1_1_quaternion.html  classgfxmath_1_1_sse_mat44-members.html  classgfxmath_1_1_sse_mat44.html  classgfxmath_1_1_vec2-members.html  classgfxmath_1_1_vec2.html  classgfxmath_1_1_vec3-members.html  classgfxmath_1_1_vec3.html  classgfxmath_1_1_vec4-members.html  classgfxmath_1_1_vec4.html  classgofxmath_1_1_mat44-members.html  classgofxmath_1_1_mat44.html  classgofxmath_1_1_quaternion-members.html  classgofxmath_1_1_quaternion.html  classgofxmath_1_1_sse_mat44-members.html  classgofxmath_1_1_sse_mat44.html  classgofxmath_1_1_vec2-members.html  classgofxmath_1_1_vec2.html  classgofxmath_1_1_vec3-members.html  classgofxmath_1_1_vec3.html  classgofxmath_1_1_vec4-members.html  classgofxmath_1_1_vec4.html  colvec_8h_source.html  colvec__math__defs_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  (+100 more)
doc/DOXYGEN/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+55 more)
doc/DOXYGEN/latex/: _sse_vec_page.tex  annotated.tex  class_mat44.tex  class_sse_mat44.tex  class_vec2.tex  class_vec3.tex  class_vec4.eps  class_vec4.tex  classgfxmath_1_1_mat44.tex  classgfxmath_1_1_quaternion.eps  classgfxmath_1_1_quaternion.tex  classgfxmath_1_1_sse_mat44.tex  classgfxmath_1_1_vec2.tex  classgfxmath_1_1_vec3.tex  classgfxmath_1_1_vec4.eps  classgfxmath_1_1_vec4.tex  classgofxmath_1_1_mat44.tex  classgofxmath_1_1_quaternion.eps  classgofxmath_1_1_quaternion.tex  classgofxmath_1_1_sse_mat44.tex  classgofxmath_1_1_vec2.tex  classgofxmath_1_1_vec3.tex  classgofxmath_1_1_vec4.eps  classgofxmath_1_1_vec4.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  group___m_a_t___m_a_t_h___f_u_n_c_s.tex  group___math_consts.tex  group___s_i_m_d_mat_math.tex  group___s_i_m_d_vec_math.tex  group___s_i_s_d_mat_math.tex  group___s_i_s_d_scalar_math.tex  group___s_i_s_d_vec_math.tex  group___s_s_e___m_a_t___m_a_t_h___f_u_n_c_s.tex  group___scalar_math_consts.tex  group___vec_math_defs.tex  hierarchy.tex  index.tex  mat44_8h.tex  math__defs_8h.tex  (+27 more)
include/: gfxmath_config.h  mat44.h  math_defs.h  matmath.h  quaternion.h  scalar_math.h  sisd_defns.h  ssemat44.h  ssemat_math_defs.h  ssevec.h  ssevec_math_defs.h  vec2.h  vec3.h  vec4.h  vecmath.h
src/: CMakeLists.txt  mat44.cpp  math_defs.cpp  matmath.cpp  quaternion.cpp  ssemat44.cpp  ssevec.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vecmath.cpp
tests/Linux x86_64/: gfxtest
tests/include/: matmath_tests.h  mingw_tostring_patch.h  scalar_tests.h  ssemat_tests.h  ssevec_tests.h  string_convert.h  vec_tests.h
tests/include/Catch/internal/: catch_default_main.hpp
tests/src/: CMakeLists.txt  matmath_tests.cpp  scalar_tests.cpp  ssemat_tests.cpp  ssevec_tests.cpp  string_convert.cpp  vec_tests.cpp
